# sony-sdk-customer

./: .gitignore  CMakeLists.txt  README.md  main.py  serve.json
app/: CameraDevice.cpp  CameraDevice.h  RemoteCli.cpp
app/CRSDK/: CameraRemote_SDK.h  CrCommandData.h
